SFUSA/force-app/main/default/objects/Account_Application__c/fields/Account_State__c.field-meta.xml
<CustomField>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.State__c</formula>
        <label>Account State</label>
        <type>Text</type>
    </CustomField>