SFUSA/force-app/main/default/objects/Account_Application__c/fields/Application_Question_Set__c.field-meta.xml
<CustomField>
        <fullName>Application_Question_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Question Set</label>
        <referenceTo>Application_Question_Set__c</referenceTo>
        <relationshipLabel>Account Applications</relationshipLabel>
        <relationshipName>Account_Applications</relationshipName>
        <type>Lookup</type>
    </CustomField>