SFUSA/force-app/main/default/objects/Account_Application__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
        <fullName>Distributor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Applications (Distributor Account)</relationshipLabel>
        <relationshipName>Distributor_Account_Applications</relationshipName>
        <type>Lookup</type>
    </CustomField>