SFUSA/force-app/main/default/objects/Account_Application__c/fields/Premise_Type__c.field-meta.xml
<CustomField>
        <fullName>Premise_Type__c</fullName>
        <label>Premise Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Off Premise</fullName>
                </value>
                <value>
                    <fullName>Non Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>