SFUSA/force-app/main/default/objects/Account_Application__c/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>