SFUSA/force-app/main/default/objects/Account_Application__c/fields/Trip_Date__c.field-meta.xml
<CustomField>
        <fullName>Trip_Date__c</fullName>
        <description>The date that is being requested by the Sales rep</description>
        <label>Trip Date</label>
        <type>Date</type>
    </CustomField>