SFUSA/force-app/main/default/objects/Account_Application__c/recordTypes/Date_Approval.recordType-meta.xml
<RecordType>
        <fullName>Date_Approval</fullName>
        <active>true</active>
        <description>Request to Approve a specific date</description>
        <label>Date Approval</label>
    </RecordType>