SFUSA/force-app/main/default/objects/Account_Application__c/listViews/Makers_Mark_Brand_Team_International_Account_Application.listView-meta.xml
<ListView>
        <fullName>Makers_Mark_Brand_Team_International_Account_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Makers Mark - Brand Team(International)</label>
        <queue>Makers_Mark_Brand_Team_International</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>